--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,53 +59,51 @@
             <ul class="nav navbar-nav">
               <li>
                 <%= link_to carts_path do %><i class="fa fa-shopping-cart"></i><%= t("label.cart") %>
-                <% if user_signed_in? %>
-                <span class="cart-text"><%= current_order.order_items.size %>
-                </span>
-                <% end %>
+                  <% if user_signed_in? %>
+                    <span class="cart-text"><%= current_order.order_items.size %>
+                    </span>
+                  <% end %>
                 <% end %>
               </li>
               <% if user_signed_in? %>
-              <% if current_user.admin? %>
-              <li>
-                <%= link_to t("label.admin"), admin_statistics_path %>
-              </li>
-              <% end %>
-              <li>
-                <%= link_to t("label.account"), "#", class: "dropdown-toggle", data: {toggle: "dropdown"} %>
-                <ul class="dropdown-menu">
-                  <li>
-                     <%= link_to t("label.admin"), admin_statistics_path %>
-                  </li>
-                  <li>
-                    <%= link_to t("label.history_order"), history_orders_path %>
-                  </li>
-                  <li>
-                    <%= link_to t("label.setting"), edit_user_registration_path %>
-                  </li>
-                  <li>
-                    <%= link_to destroy_user_session_path, method: :delete do %>
-                    <i class="fa fa-sign-out"></i><%= t("label.log_out") %>
+                <li>
+                  <%= link_to current_user.name, "#", class: "dropdown-toggle", data: {toggle: "dropdown"} %>
+                  <ul class="dropdown-menu">
+                    <% if current_user.admin? %>
+                      <li>
+                        <%= link_to t("label.admin"), admin_statistics_path %>
+                      </li><br>
+                    <% else %>
+                      <li>
+                        <%= link_to t("label.history_order"), history_orders_path %>
+                      </li><br>
                     <% end %>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i><%= t("label.log_out") %>
-                <% end %>
-              </li>
-              <% else %>
-              <li>
-                <%= link_to signin_path do %>
-                <i class="fa fa-lock"></i><%= t("label.login") %>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to new_user_registration_path do %>
-                <%= t("label.sign_up") %></a>
-                <% end %>
-              </li>
+                    <li>
+                      <%= link_to t("label.setting"), edit_user_registration_path %>
+                    </li><br>
+                    <li>
+                      <%= link_to destroy_user_session_path, method: :delete do %>
+                      <i class="fa fa-sign-out"></i><%= t("label.log_out") %>
+                      <% end %>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <%= link_to destroy_user_session_path, method: :delete do %>
+                  <i class="fa fa-sign-out"></i><%= t("label.log_out") %>
+                  <% end %>
+                </li>
+                <% else %>
+                <li>
+                  <%= link_to signin_path do %>
+                  <i class="fa fa-lock"></i><%= t("label.login") %>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_user_registration_path do %>
+                  <%= t("label.sign_up") %></a>
+                  <% end %>
+                </li>
               <% end %>
             </ul>
           </div>
